--- a/src/app/home/extensiones/extensiones.component.html
+++ b/src/app/home/extensiones/extensiones.component.html
@@ -1,1 +1,34 @@
-<p>extensiones works!</p>
+<div class="container">
+    <h2>Extensiones</h2>
+    <table class="table">
+        <thead>
+          <tr>
+            
+            <th scope="col">Extensión</th>
+            <th scope="col">Nombre</th>
+            <th scope="col">Puesto</th>
+            <th scope="col">Correo</th>
+            <th scope="col">Acciones</th>
+          </tr>
+        </thead>
+        <tbody>
+            @for (extension of extensiones; track $index) {
+                <tr>
+                    
+                    <td>{{extension.extension}}</td>
+                    <td>{{extension.nombre}}</td>
+                    <td>{{extension.puesto_departamento}}</td>
+                    <td>{{extension.correo}}</td>
+                    <td><div class="btn-group" role="group" aria-label="Basic example">
+                        <button (click)="editar(extension._id)"  type="button" class="btn btn-primary"><i class="fa-regular fa-pen-to-square"></i></button>
+                        <button type="button" class="btn btn-primary"><i class="fa-regular fa-trash-can"></i></button>
+                        <button type="button" class="btn btn-primary"><i class="fa-regular fa-eye"></i></button>
+                      </div></td>
+                  </tr>
+            }
+         
+        </tbody>
+      </table>
+
+     
+</div>
