--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -14,7 +14,7 @@
                             <label for="" class="mb-2">
                                 Email
                             </label>
-                            <input formControlName="email" type="email" class="form-control"  >
+                            <input formControlName="username" type="text" class="form-control"  >
                         </div>
                         <div class="mb-3">
                             <label for="" class="mb-2">
